--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/socket.io-client": "^1.4.36",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
